--- a/UI/views/userDashboard.html
+++ b/UI/views/userDashboard.html
@@ -49,7 +49,7 @@
                     src="https://images.unsplash.com/photo-1544216717-3bbf52512659?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
             </div>
             <div class="story-content">
-                <h4>Working Out</h4>
+                <h4><a href="viewOne.html">Working Out</a></h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
                 <button class="story-button-share">Share</button>
                 <a class="story-button-edit" href="editArticle.html">Edit</a>
@@ -62,7 +62,7 @@
                     src="https://images.unsplash.com/photo-1519861531473-9200262188bf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
             </div>
             <div class="story-content">
-                <h4>Basketball</h4>
+                <h4><a href="viewOne.html">Basketball</a></h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
                 <button class="story-button-share">Share</button>
                 <a class="story-button-edit" href="editArticle.html">Edit</a>
@@ -75,7 +75,7 @@
                     src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
             </div>
             <div class="story-content">
-                <h4>Web Dev</h4>
+                <h4><a href="viewOne.html">Web Dev</a></h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
                 <button class="story-button-share">Share</button>
                 <a class="story-button-edit" href="editArticle.html">Edit</a>
@@ -88,7 +88,7 @@
                     src="https://images.unsplash.com/photo-1475869430886-fb14585f7443?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
             </div>
             <div class="story-content">
-                <h4>African Cuisine</h4>
+                <h4><a href="viewOne.html">African Cuisine</a></h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
                 <button class="story-button-share">Share</button>
                 <a class="story-button-edit" href="editArticle.html">Edit</a>
@@ -101,7 +101,7 @@
                     src="https://images.unsplash.com/photo-1561993090-b7c00b87852a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
             </div>
             <div class="story-content">
-                <h4>Life at Andela</h4>
+                <h4><a href="viewOne.html">Life at Andela</a></h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
                 <button class="story-button-share">Share</button>
                 <a class="story-button-edit" href="editArticle.html">Edit</a>
