--- a/UI/views/viewAll.html
+++ b/UI/views/viewAll.html
@@ -56,9 +56,10 @@
                 <h4>Working in a team</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
                 <a class="story-button-share" href="viewOne.html">Read more</a>
-                <a class="story-button-edit" href="addComment.html">Add comment</a>
-                <button class="story-button-delete">Flag</button>
+                <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Nuru on 13/09/2019</h3>
+                <textarea id="comment-area" placeholder="Comment"></textarea>
+                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
             </div>
 
             <div class="comments">
@@ -83,9 +84,10 @@
                 <h4>Web development</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
                 <a class="story-button-share" href="viewOne.html">Read more</a>
-                <a class="story-button-edit" href="addComment.html">Add comment</a>
-                <button class="story-button-delete">Flag</button>
+                <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Ezekiel on 07/09/2019</h3>
+                <textarea id="comment-area" placeholder="Comment"></textarea>
+                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
             </div>
 
             <div class="comments">
@@ -104,9 +106,10 @@
                 <h4>Faith in God</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
                 <a class="story-button-share" href="viewOne.html">Read more</a>
-                <a class="story-button-edit" href="addComment.html">Add comment</a>
-                <button class="story-button-delete">Flag</button>
+                <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Festus on 07/09/2019</h3>
+                <textarea id="comment-area" placeholder="Comment"></textarea>
+                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
             </div>
 
             <div class="comments">
@@ -131,9 +134,10 @@
                 <h4>Classic cars</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
                 <a class="story-button-share" href="viewOne.html">Read more</a>
-                <a class="story-button-edit" href="addComment.html">Add comment</a>
-                <button class="story-button-delete">Flag</button>
+                <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Doddy on 28/08/2019</h3>
+                <textarea id="comment-area" placeholder="Comment"></textarea>
+                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
             </div>
 
             <div class="comments">
@@ -154,9 +158,10 @@
                 <h4>Healthy diet</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
                 <a class="story-button-share" href="viewOne.html">Read more</a>
-                <a class="story-button-edit" href="addComment.html">Add comment</a>
-                <button class="story-button-delete">Flag</button>
+                <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Karen on 14/08/2019</h3>
+                <textarea id="comment-area" placeholder="Comment"></textarea>
+                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
             </div>
 
             <div class="comments">
@@ -171,9 +176,10 @@
                 <h4>Most popular sports in the world</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
                 <a class="story-button-share" href="viewOne.html">Read more</a>
-                <a class="story-button-edit" href="addComment.html">Add comment</a>
-                <button class="story-button-delete">Flag</button>
+                <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Nuru on 17/07/2019</h3>
+                <textarea id="comment-area" placeholder="Comment"></textarea>
+                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
             </div>
 
             <div class="comments">
