--- a/UI/views/addArticle.html
+++ b/UI/views/addArticle.html
@@ -46,7 +46,7 @@
                     <option value="religion">Religion</option>
                     <option value="politics">Politics</option>
                 </select><br>
-                <p contenteditable="true" class="article-area" id="artar-small">article goes here</p><br>
+                <p contenteditable="true" class="article-area" id="artar-small" data-text="The article goes here"></p><br>
                 <button class="my-buttons-customized3" id="btn2-small">Add article</button>
             </form>
         </div>
