ch(UI): More improvements on user interface [Finishes #168982517]

--- a/UI/views/userProfile.html
+++ b/UI/views/userProfile.html
@@ -33,15 +33,15 @@
     <div class="container">
         <div id="user-profile">
             <i class="fas fa-people-carry up-logo"></i>
-            <h4>User Profile</h4>
+            <h3>User Profile</h3>
             <img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRp-MLoHVHXxaOFY6k-ZTqEkQr4Di_p-gfbWI9Mhq--x16i18tYPA"><br>
-            <label>Name: Niyigena Abdou Nuru</label><br>
-            <label>Username: Abdoul Nuru</label><br>
-            <label>Email: abdoulniyigena@gmail.com</label><br>
-            <label>Account created on 23/05/2019</label><br>
-            <button class="story-button">Edit</button>
-            <button class="story-button">Change password</button>
+            <h4><span>Name:</span> Niyigena Abdou Nuru</h4><br>
+            <h4><span>Username:</span> Abdoul Nuru</h4><br>
+            <h4><span>Email:</span> abdoulniyigena@gmail.com</h4><br>
+            <h4>Account created on 23/05/2019</h4><br>
+            <button class="story-button-share">Edit</button>
+            <button class="story-button-edit">Change password</button>
         </div>
     </div>
 
