--- a/UI/views/viewAll.html
+++ b/UI/views/viewAll.html
@@ -58,8 +58,10 @@
                 <a class="story-button-share" href="viewOne.html">Read more</a>
                 <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Nuru on 13/09/2019</h3>
-                <textarea id="comment-area" placeholder="Comment"></textarea>
-                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                <div id="cmnt-area-container">
+                    <textarea id="comment-area" placeholder="Comment"></textarea>
+                    <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                </div>
             </div>
 
             <div class="comments">
@@ -86,8 +88,10 @@
                 <a class="story-button-share" href="viewOne.html">Read more</a>
                 <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Ezekiel on 07/09/2019</h3>
-                <textarea id="comment-area" placeholder="Comment"></textarea>
-                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                <div id="cmnt-area-container">
+                    <textarea id="comment-area" placeholder="Comment"></textarea>
+                    <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                </div>
             </div>
 
             <div class="comments">
@@ -108,8 +112,10 @@
                 <a class="story-button-share" href="viewOne.html">Read more</a>
                 <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Festus on 07/09/2019</h3>
-                <textarea id="comment-area" placeholder="Comment"></textarea>
-                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                <div id="cmnt-area-container">
+                    <textarea id="comment-area" placeholder="Comment"></textarea>
+                    <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                </div>
             </div>
 
             <div class="comments">
@@ -136,8 +142,10 @@
                 <a class="story-button-share" href="viewOne.html">Read more</a>
                 <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Doddy on 28/08/2019</h3>
-                <textarea id="comment-area" placeholder="Comment"></textarea>
-                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                <div id="cmnt-area-container">
+                    <textarea id="comment-area" placeholder="Comment"></textarea>
+                    <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                </div>
             </div>
 
             <div class="comments">
@@ -160,8 +168,10 @@
                 <a class="story-button-share" href="viewOne.html">Read more</a>
                 <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Karen on 14/08/2019</h3>
-                <textarea id="comment-area" placeholder="Comment"></textarea>
-                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                <div id="cmnt-area-container">
+                    <textarea id="comment-area" placeholder="Comment"></textarea>
+                    <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                </div>
             </div>
 
             <div class="comments">
@@ -178,8 +188,10 @@
                 <a class="story-button-share" href="viewOne.html">Read more</a>
                 <button class="story-button-delete"><i class="far fa-flag"></i></button>
                 <h3>Posted by Nuru on 17/07/2019</h3>
-                <textarea id="comment-area" placeholder="Comment"></textarea>
-                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                <div id="cmnt-area-container">
+                    <textarea id="comment-area" placeholder="Comment"></textarea>
+                    <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                </div>
             </div>
 
             <div class="comments">
