--- a/UI/views/viewOne.html
+++ b/UI/views/viewOne.html
@@ -55,8 +55,10 @@
                 habitant. Diam vulputate ut pharetra sit amet aliquam.
             </p>
                 <button class="story-button-delete"><i class="far fa-flag"></i></button><br><br>
-                <textarea id="comment-area" placeholder="Comment"></textarea>
-                <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                <div id="cmnt-area-container">
+                    <textarea id="comment-area" placeholder="Comment"></textarea>
+                    <button class="story-button-edit2" id="str-cmtn">Add comment</button>
+                </div>
             </div>
         </div>
     </div>
