--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -164,6 +164,7 @@ nav{
 
 	#str-cmtn{
 		float: none;
+		font-size: 12px;
 	}
 }
 
@@ -272,7 +273,7 @@ hr {
     padding-right: 16px;
     padding-bottom: 8px;
     padding-left: 16px;
-    font-size: 14px;
+    font-size: 20px;
     line-height: 1.42857143;
     border-radius: 4px;
     background-color: #fff;
@@ -419,6 +420,11 @@ hr {
 	padding: 4px;
 }
 
+#cmnt-area-container{
+	display: flex;
+	justify-content: space-evenly;
+}
+
 .txt-area2 {
 	height: 50em;
     min-height: 50em;
@@ -478,7 +484,7 @@ hr {
 .own-title {
 	font-size: 40px;
 	color: #4F575E;
-	font-family: 'Dancing Script', cursive;
+	/*font-family: 'Dancing Script', cursive;*/
 }
 
 .dashboard-tab a:active,
@@ -566,7 +572,7 @@ hr {
   border-radius: .25rem;
   outline: none;
   margin-top: 10px;
-  font-size: 20px;
+  font-size: 17px;
   font-family: "Times New Roman";
   color: #ffffff;
 }
@@ -591,11 +597,9 @@ hr {
   cursor: pointer;
   border-radius: .25rem;
   outline: none;
-  margin-top: 3px;
   font-size: 15px;
   font-family: "Times New Roman";
   color: #ffffff;
-  float: right;
 }
 
 .story-button-delete {
@@ -606,7 +610,7 @@ hr {
   border-radius: .25rem;
   outline: none;
   margin-top: 10px;
-  font-size: 20px;
+  font-size: 17px;
   font-family: "Times New Roman";
   color: #ffffff;
 }
@@ -707,10 +711,10 @@ hr {
 .one-img {
 	background-size: cover;
   	min-height: 180px;
-  	max-height: 280px;
+  	max-height: 580px;
   	background-position: center;
   	background-color: #ccc;
-  	height: 280px;
+  	height: 490px;
 }
 
 .one-img img{
@@ -806,15 +810,19 @@ hr {
 	margin-top: 2%;
 }
 
-#user-profile h4{
+#user-profile h3{
 	margin-bottom: 20px;
-	font-size: 4em;
+	font-size: 3em;
 	color: #3C4858;
 }
 
-#user-profile label {
-	color: #4F575E;
-	font-size: 20px;
+#user-profile h4{
+	font-size: 2em;
+	color: #3C4858;
+}
+
+#user-profile span{
+	display: contents;
 }
 
 #user-profile img {
@@ -823,10 +831,6 @@ hr {
 
 #user-profile button {
 	margin-bottom: 10px;
-} 
-
-#user-profile button:hover {
-	background-color: #CCCCCC;
 } 
 
 .table-content {
@@ -891,10 +895,14 @@ table button:hover {
 
 .article-area{
 	font-size: 20px;
-	padding: 5px;
+	padding-left: 16px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-right: 5px;
 	width: 45%;
 	margin-left: 27.5%;
 	box-shadow: 0 0 5px #256188;
+	text-align: left;
 }
 
 .footer {
