--- a/UI/views/userProfile.html
+++ b/UI/views/userProfile.html
@@ -35,14 +35,36 @@
             <i class="fas fa-people-carry up-logo"></i>
             <h3>User Profile</h3>
             <img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRp-MLoHVHXxaOFY6k-ZTqEkQr4Di_p-gfbWI9Mhq--x16i18tYPA"><br>
-            <h4><span>Name:</span> Niyigena Abdou Nuru</h4><br>
-            <h4><span>Username:</span> Abdoul Nuru</h4><br>
-            <h4><span>Email:</span> abdoulniyigena@gmail.com</h4><br>
-            <h4>Account created on 23/05/2019</h4><br>
+                src="https://images.unsplash.com/photo-1506919258185-6078bba55d2a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"><br>
+            <div id="user-info">
+                <table class="table-content-2">
+                <tbody>
+                        <tr>
+                            <td>Name:</td>
+                            <td>Niyigena Abdou Nuru</td>
+                        </tr>
+                        <tr>
+                            <td>Username:</td>
+                            <td>Abdoul Nuru</td>
+                        </tr>
+                        <tr>
+                            <td>Email:</td>
+                            <td>abdoulniyigena@gmail.com</td>
+                        </tr>
+                        <tr>
+                            <td>Account created on:</td>
+                            <td>23/05/2019</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <button class="story-button-share">Edit</button>
             <button class="story-button-edit">Change password</button>
         </div>
+    </div>
+
+    <div class="footer">
+        <p>Teamwork &copy; 2019</p>
     </div>
 
     <script src="../js/main.js"></script>
